
JSON::true and JSON::false returned JSON::Boolean objects.
For workaround, they return JSON::PP::Boolean objects in this version.

    isa_ok(JSON::true, 'JSON::PP::Boolean');

And it discards a feature:

    ok(JSON::true eq 'true');

In other word, JSON::PP::Boolean overload numeric only.

    ok( JSON::true == 1 );

##########################################################################

2.90  Wed Oct 30 19:48:43 2013

	**** Please see to the headline in this file. ****

	- workaround for JSON::XS version 3.0 or later installed case.

	  * the objects returned by JSON::true/false are JSON::PP::Boolean.
	  * they do not overload 'eq'.

	- changed test cases for this patch.

	   t/e02_bool.t
	   t/e03_bool2.t
	   t/x17_strange_overload.t
	   t/xe02_bool.t
	   t/xe03_bool2.t
	   t/xe12_boolean.t

	**** Please see to the headline in this file. ****


2.61  Thu Oct 17 19:38:55 2013
	- fixed return/or in _incr_parse
	  reported and patched by MAUKE, sprout and rjbs
	  https://rt.cpan.org/Public/Bug/Display.html?id=86948

2.60
	- $json->is_xs, $json->is_pp was completely broken.
	    pointed by rt#75867 and emceelam

2.59  Wed Jun  5 14:35:54 2013
	- PUREPERL_ONLY support was not supported...
	    and finally remove all PP options from Makefile.PL.
	- recommend JSON::XS instead of conditionally requiring it
	     patched by miyagaw
	  ( for example, $ cpanm --with-recommends JSON)
	- Hide more packages from PAUSE (and other stuff)
	     patched by miyagawa

2.58  Thu May 23 09:04:37 2013
	- support PUREPERL_ONLY install option. (rt#84876)
	   (PERL_ONLY and NO_XS are not yet removed)
	- stop installing JSON::XS automatically on Perl 5.18

2.57
	- t/x17_strage_overload.t didn't work correctly.

2.56  Sat Apr  6 09:58:32 2013
	- fixed t/x17_strage_overload.t (rt#84451 by Ricardo Signes)

2.55
	- update JSON::BackportPP version

2.54  Fri Apr  5 16:15:08 2013
	- fixed t/19_incr.t on perl >= 5.17.10 (wyant, rt#84154)