@@ -1,4 +1,4 @@
-JSON version 2.58
+JSON version 2.60
 =================
 
 "JSON::PP" was earlier included in the "JSON" distribution,
